--- a/Flyers.html
+++ b/Flyers.html
@@ -35,7 +35,7 @@
 
             <div style="margin-top: 35px;">
                 <p>Scannez le QR Code pour accéder facilement au site :</p>
-                <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=http://localhost/monsite/index.php" alt="QR Code">
+                <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://leleg2007.github.io/Flyers.html" alt="QR Code">
             </div style="margin-top: 30px;">
         </section>
     </main>
