--- a/FlyBox.html
+++ b/FlyBox.html
@@ -84,7 +84,7 @@
     </main>
 
     <footer>
-        &copy; 2025 Mon Projet
+        &copy; 2025 FlyBox x Cabrini
     </footer>
 </body>
 </html>
